<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioButton
        android:id="@+id/statusRadio_InProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listType_InProgress" />

    <RadioButton
        android:id="@+id/statusRadio_Completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listType_Completed" />

    <RadioButton
        android:id="@+id/statusRadio_OnHold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listType_onhold" />

    <RadioButton
        android:id="@+id/statusRadio_Dropped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listType_dropped" />

    <RadioButton
        android:id="@+id/statusRadio_Planned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listType_planned" />

</RadioGroup>