<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textblurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/fr_textblurb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edittext_malUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fr_hint_user"
        android:padding="8dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_malPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fr_hint_pass"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/button_connectToMal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/fr_action_connect" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="48dp"
        android:text="@string/fr_noaccount" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fr_noaccount_button" />

</LinearLayout>